--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,196 @@
-/* Add CSS styling here */
+/* Add CSS reset here */
+html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
+del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
+	vertical-align: baseline;
+	font-family: inherit;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	outline: 0;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+	}
+body {
+	background: white;
+	line-height: 1;
+	
+	}
+ol, ul {
+	list-style: none;
+	}
+/* tables still need cellspacing="0" in the markup */
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+	}
+caption, th, td {
+	font-weight: normal;
+	text-align: left;
+	}
+/* remove possible quote marks (") from <q> & <blockquote> */
+blockquote:before, blockquote:after, q:before, q:after {
+	content: "";
+	}
+blockquote, q {
+	quotes: "" "";
+	}
+
+    /* BEGIN STYLING */
+/* START HEADER START HEADER START HEADER START HEADER */
+*{
+    box-sizing:border-box;
+    font-size:62.5%;
+    max-width:100vmax;
+    min-width:none;
+    font-family: 'ZCOOL KuaiLe', cursive;
+}
+body { 
+    height: 100vh;
+    margin: 0; 
+    font-family: helvetica, arial, sans-serif;
+    display:flex;
+    flex-direction:column;
+    
+}
+header{
+    display:flex;
+    flex-direction:column;
+    border-bottom:.1rem solid black;
+    padding:1%;
+
+}
+
+header nav{
+    display:flex;
+    justify-content:flex-start;
+    width:100vmax;
+    
+}
+header nav a{
+    padding:.3rem .6rem;
+    font-size:1.3rem;
+    border:.1rem solid black;
+    text-decoration:none;
+    text-align:center;
+    color:black;
+    box-sizing:border-box;
+    overflow:hidden;
+    transition-duration: .5s;
+}
+
+header nav a:hover{
+    background-color: #C6302A;
+}
+h1{
+    font-size:5.2rem;
+}
+/* END HEADER END HEADER END HEADER END HEADER */
+/* START ABOUT ME START ABOUT ME START ABOUT ME */
+
+.about-me{
+    display:flex;
+    margin-bottom:3%;
+}
+.image-container{
+    display:flex;
+    justify-content: flex-end;
+    align-items:center;
+    padding:3%;
+    width:50vmax;
+    object-fit:cover;
+}
+.image-container img{
+    width:90%;
+    height:25rem;
+    border-radius: 10px;
+    object-fit:cover;
+}
+.about-me-right{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    padding: 0 3%
+}
+
+.about-me-right h2{
+    font-size:4rem;
+    color: #C6302A;
+    
+}
+.about-me-right p{
+    font-size:1.6rem;
+    color:#50528C;
+}
+
+.about-me-right button{
+    width:8rem;
+    font-size:1.2rem;
+    background-color: white;
+    color:red;
+    border:1px black solid;
+    text-decoration:none;
+    
+}
+.about-me-right button:hover{
+    background-color:#C6302A;
+}
+
+
+/* END OF ABOUT ME END OF ABOUT ME END OF ABOUT ME */
+/* BEGINNING OF PROJECTS BEGINNING OF PROJECTS */
+
+.projects{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-around;
+    align-items:center;
+    width:100vmax;
+}
+.projects h3{
+    align-items:center;
+}
+
+.project-image-containers img{
+    width:15rem;
+    height:15rem;
+    overflow:hidden;
+    object-fit:cover;
+    border-radius: 10px;
+}
+img{
+    width:100%;
+}
+
+h3{
+    text-align:center;
+    font-weight:bold;
+    font-size:1.6rem;
+    padding:.4rem;
+    padding-bottom:3rem;
+}
+/* END OF PROJECTS END OF PROJECTS */
+/* START OF FOOTER START OF FOOTER START OF FOOTER */
+
+footer{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    padding-bottom:10rem;
+    background-color:#C6302A;
+}
+h4{
+    font-size:2rem;
+    padding:1rem;
+}
+footer button{
+    font-size:1rem;
+    width:10rem;
+    text-align: center;
+}
