--- a/style/index.css
+++ b/style/index.css
@@ -11,7 +11,7 @@ dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
 	outline: 0;
 	padding: 0;
 	margin: 0;
-	border: 0px;
+	border: px solid black;
 	}
 /* remember to define focus styles! */
 :focus {
@@ -42,21 +42,20 @@ blockquote, q {
 	quotes: "" "";
 	}
 
-    /* BEGIN STYLING */
 /* START HEADER START HEADER START HEADER START HEADER */
 *{
     box-sizing:border-box;
     font-size:62.5%;
-    max-width:100vmax;
-    min-width:none;
-    font-family: 'ZCOOL KuaiLe', cursive;
+    width:100%;
+    font-family:font-family: 'Montserrat', sans-serif;
+    text-decoration:none;
+    color:black;
 }
 .container{
-    width:800px;
+    width:100%;
     margin:auto;
 }
 body { 
-    height: 100vh;
     margin: 0; 
     font-family: helvetica, arial, sans-serif;
     display:flex;
@@ -64,19 +63,16 @@ body {
     
 }
 header{
-    display:flex;
-    flex-direction:column;
-    border-bottom:.1rem solid black;
-    padding:1%;
-
+    background-color:lightgrey;
+    padding:2rem;
 }
 
 header nav{
     display:flex;
     justify-content:flex-start;
-    
-    
+    width:30rem;
 }
+
 header nav a{
     padding:.3rem .6rem;
     font-size:1.3rem;
@@ -84,119 +80,84 @@ header nav a{
     text-decoration:none;
     text-align:center;
     color:black;
-    box-sizing:border-box;
-    overflow:hidden;
-    transition-duration: .2s;
+    box-sizing:border-box;  
+    background-color:white;
 }
 
 header nav a:hover{
-    background-color: #C6302A;
-    transform: scale(1.1, 1.1);
+    color:white;
+    background-color:black;
 }
+
 h1{
     font-size:5.2rem;
 }
 
-/* END HEADER END HEADER END HEADER END HEADER */
 /* START ABOUT ME START ABOUT ME START ABOUT ME */
 
 .about-me{
-    display:flex;
-    margin-bottom:3%;
+    display: flex;
+    justify-content:center;
 }
-.image-container{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    padding:3%;
-    object-fit:cover;
+.about-me img{
+    width:50%;
 }
-.image-container img{
-    width:390px;
-    height:390px;
-    border-radius: 10px;
-    object-fit:cover;
-}
+
 .about-me-right{
     display:flex;
     flex-direction:column;
-    justify-content:center;
-    padding: 0 3%;
-    width:400px;
+    justify-content:space-evenly;
+    padding:3rem;
+    width:50%;
+}
+h2{
+    font-size:2.4rem;
 }
 
-.about-me-right h2{
-    font-size:4rem;
-    color: #C6302A;
-    
-}
-.about-me-right p{
-    font-size:1.6rem;
-    color:#50528C;
-}
-
-.about-me-right button{
-    width:8rem;
+p{
     font-size:1.2rem;
-    background-color: white;
-    color:red;
-    border:1px black solid;
-    text-decoration:none;
-    
-}
-.about-me-right button:hover{
-    background-color:#C6302A;
 }
 
+.about-me button{
+    width:7rem;
+    font-size:.6rem;
+    background-color:white;
+}
 
-/* END OF ABOUT ME END OF ABOUT ME END OF ABOUT ME */
 /* BEGINNING OF PROJECTS BEGINNING OF PROJECTS */
 
-.projects{
+.projects .row-one, .row-two{
     display:flex;
-    flex-wrap:wrap;
+    flex-direction:row;
     justify-content:space-evenly;
-    align-items:center;
-    
-}
-.projects h3{
-    align-items:center;
 }
 
-.project-image-containers img{
-    width:175px;
-    height:175px;
-    overflow:hidden;
-    object-fit:cover;
-    border-radius: 10px;
-}
-img{
-    width:100%;
-}
-
-h3{
+.project{
+    width:22%;
+    padding:2rem;
     text-align:center;
-    font-weight:bold;
-    font-size:1.6rem;
-    padding:.4rem;
-    padding-bottom:3rem;
 }
-/* END OF PROJECTS END OF PROJECTS */
+h3{
+    padding:.2rem;
+    font-size:1rem;
+}
 /* START OF FOOTER START OF FOOTER START OF FOOTER */
 
 footer{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    padding-bottom:40px;
-    background-color:#C6302A;
+    background-color:lightgrey;
+    text-align:center;
+    padding:2rem;
 }
 h4{
     font-size:2rem;
-    padding:1rem;
+    padding:1rem;   
 }
+
 footer button{
     font-size:1rem;
     width:10rem;
-    text-align: center;
+    text-align: center; 
+    background-color:white;
+    color:black;
 }
+
